smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/traits/annotation-invalid-object-key2.smithy
// Syntax error at line 3, column 8: Expected RPAREN(')') but found COLON(':') | Model
namespace com.foo
@foo({}: true)
string MyString
